syntax = "proto3";

package fstmon.cpu;

import "common.proto";

option go_package = "github.com/eterline/fstmon/internal/infra/grpc/flugel/common";

// Static information about a CPU core
message CpuCoreInfo {
    int32 physical_id = 1;
    int32 core_id = 2;
    int32 siblings = 3;
    int32 cache_kb = 4;
}

// Static CPU package info
message CpuPackage {
    string vendor = 1;
    string model_name = 2;
    string microcode = 3;
    repeated string flags = 4;
    repeated CpuCoreInfo cores = 5;
}

// Dynamic per-core metrics
message CpuCoreMetrics {
    double load = 1;
    double frequency = 2;
}

// All CPU metrics
message CpuMetrics {
    CpuCoreMetrics average = 1;
    repeated CpuCoreMetrics cores = 2;
}

// -------- gRPC service --------

service CpuService {
    rpc GetCpuInfo(GetCpuInfoRequest) returns (CpuPackageResponse);
    rpc GetCpuMetrics(GetCpuMetricsRequest) returns (CpuMetricsResponse);
}

message GetCpuInfoRequest {}
message GetCpuMetricsRequest {}

message CpuPackageResponse {
    CpuPackage cpu = 1;
}
message CpuMetricsResponse {
    CpuMetrics metrics = 1;
}
